# bake-me-up

./: .gitignore  README.md  SUBMISSION.md  langgraph.json
.github/workflows/: keep-warm.yml
backend/: .env.example  README.md  pyproject.toml
backend/agent/: __init__.py  build_catalog.py  catalog.json  catalog.py  config.py  graph.py  ingest.py  retrieval.py  tools.py
backend/eval/: README.md  __init__.py  build_collections.py  harness.py  run_behavior.py  run_eval.py  testset.jsonl
backend/eval/results/: behavior_results.json  retrieval_results.json  retrieval_table.md
data/recipes/: README.md  TEMPLATE.md  anpan.md  chocolate-chip-cookies.md  hawaiian-butter-mochi.md  japanese-cheesecake.md  japanese-milk-bread.md  roll-cake.md
docs/: 01-problem.md  02-solution.md  03-data.md  04-prototype.md  07-next-steps.md  evaluation.md
frontend/: .env.example  .gitignore  README.md  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/recipes/: page.tsx
frontend/components/: AssistantPanel.tsx  BakeComplete.tsx  BakingTogether.tsx  CoachLine.tsx  CollectionSearchCard.tsx  GuidedBaking.tsx  Kitchen.tsx  KiwiMark.tsx  Nav.tsx  ReasoningStages.tsx  RecipeCard.tsx  RecipeImage.tsx  RecipeWorkspace.tsx  SessionProvider.tsx  WebSearchCard.tsx  useCoachChat.ts
frontend/components/recipe/: GeneralNotes.tsx  IngredientGroups.tsx  MetaCards.tsx  RecipeHero.tsx  RecipeTimeline.tsx  (+2 more)
frontend/content/: step-questions.json
frontend/lib/: format.ts  recipes.ts
frontend/scripts/: gen-step-questions.mjs  sync-recipes.mjs
(+3 files in other folders)
