[project]
name = "bake-me-up-backend"
version = "0.1.0"
description = "Bake Me Up — agentic-RAG baking companion (LangGraph backend)"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-qdrant>=0.2.0",
    "qdrant-client>=1.12.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
]

[dependency-groups]
# Local dev server for `langgraph dev` (in-memory, no cloud needed).
dev = [
    "langgraph-cli[inmem]>=0.1.55",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agent"]
# Ensure the generated recipe catalog ships in the deployed package (the planner reads it).
force-include = { "agent/catalog.json" = "agent/catalog.json" }
